# flux

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  FLUX-DESIGN.md  LICENSE  README.md  config.toml  docker-compose.yml
connector-manager/: Cargo.toml  Dockerfile
connector-manager/src/: api.rs  connector.rs  generic_config.rs  lib.rs  main.rs  manager.rs  named_config.rs  registry.rs  scheduler.rs  types.rs
connector-manager/src/connectors/github/: api.rs  config.rs  mod.rs  transformer.rs
connector-manager/src/runners/: generic.rs  mod.rs  named.rs
docs/: api.md  architecture.md  state-model.md
docs/decisions/: 000-flux-internal-public-instances  001-flux-event-backbone-architecture.md  001-flux-state-engine-architecture.md  002-persistence-and-recovery.md  003-multitenancy-and-authentication.md  004-realtime-metrics-and-deletion.md  005-connector-framework.md  006-security-hardening.md  007-universal-connector-framework.md  008-namespace-persistence.md  009-stripe-provisioner.md
docs/sessions/: 2026-02-10-phase1-task1-infrastructure-setup.md  2026-02-10-phase1-task2-event-model.md  2026-02-10-phase1-task3-stream-management.md  2026-02-10-phase1-task4-publish-api.md  2026-02-11-phase1-documentation.md  2026-02-11-phase1-python-examples.md  2026-02-11-phase1-task1-project-structure.md  2026-02-11-phase1-task2-event-model.md  2026-02-11-phase1-task3-state-engine.md  2026-02-11-phase1-task4-event-ingestion.md  2026-02-11-phase1-task5-websocket-api.md  2026-02-11-phase1-task6-integration.md  2026-02-12-phase2-planning.md  2026-02-12-phase2-task1-snapshot-core.md  2026-02-12-phase2-task2-sequence-tracking.md  2026-02-12-phase2-task3-snapshot-manager.md  2026-02-12-phase2-task4-recovery-startup.md  2026-02-12-phase2-task5-compression-atomicity.md  2026-02-12-phase2-task6-documentation-config.md  2026-02-13-phase2-snapshot-manager-integration.md  2026-02-13-phase2-testing.md  2026-02-13-phase3-multitenancy-auth-planning.md  2026-02-13-phase3-task1-namespace-model.md  2026-02-13-phase3-task2-token-extraction.md  2026-02-13-phase3-task3-entity-id-parsing.md  2026-02-13-phase3-task4-authorization-middleware.md  2026-02-13-phase3-task5-namespace-registration-api.md  2026-02-13-phase3-task6-entity-query-filtering.md  2026-02-13-phase3-task7-configuration-documentation.md  2026-02-14-phase4a-fix-websocket-proxy-field-name.md  2026-02-14-ui-delimiter-aware-grouping.md  2026-02-14-ui-dynamic-entity-grouping.md  2026-02-17-connector-interface.md  2026-02-17-connector-manager-core.md  2026-02-17-connector-status-api.md  2026-02-17-credential-storage.md  2026-02-17-oauth-flow.md  2026-02-18-connector-status-and-ui-polish.md  2026-02-18-connector-ui-and-manager-binary.md  2026-02-18-github-connector-config-and-api.md  (+42 more)
docs/workflow/: multi-session-workflow.md
examples/: README.md  app-events-publisher.sh  openclaw-skill  random-publisher.sh  system-metrics-publisher.sh
examples/python/: README.md  publish_event.py  query_state.py  requirements.txt  subscribe_websocket.py
flux-service/: Dockerfile  go.mod  go.sum  main.go
skills/flux-interact/: README.md  SKILL.md
src/: api.rs  config.rs  event.rs  lib.rs  main.rs  nats.rs  state.rs  subscription.rs
src/api/: admin.rs  auth_middleware.rs  connectors.rs  deletion.rs  history.rs  ingestion.rs  mod.rs  namespace.rs  query.rs  websocket.rs
src/auth/: mod.rs  tests.rs
src/config/: mod.rs  runtime.rs
tests/: admin_api_test.rs  body_size_test.rs  connector_api_test.rs  rate_limit_test.rs  websocket_auth_test.rs
ui/: Cargo.toml  Dockerfile  README.md  Trunk.toml  federation-ws.js  federation.js  index.html  package-lock.json  package.json  serve.js  server.js
ui/public/: index.html
ui/src/: main.rs
(+44 files in other folders)
