[package]
name = "flux"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-stream = "0.1"

# Web framework
axum = { version = "0.7", features = ["ws"] }

# NATS client
async-nats = "0.37"

# Concurrent HashMap (lock-free)
dashmap = "6.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
futures = "0.3"

# UUID generation (v7 time-ordered, v4 for tokens)
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Compression
flate2 = "1.0"

# Random number generation (for namespace IDs)
rand = "0.8"

# Credential storage (for connector framework)
rusqlite = { version = "0.32", features = ["bundled"] }
aes-gcm = "0.10"
base64 = "0.21"

# OAuth flow (for connector framework)
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
serde_urlencoded = "0.7"

[dev-dependencies]
tempfile = "3.14"
tower = "0.5"

[lib]
name = "flux"
path = "src/lib.rs"

[[bin]]
name = "flux"
path = "src/main.rs"
