[package]
name = "connector-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "connector-manager"
path = "src/main.rs"

[dependencies]
# Re-export FluxEvent from main flux crate
flux = { path = "../" }

# Async trait support
async-trait = "0.1"

# Serialization (for OAuth types)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling (for credential expiration)
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"

# Credential storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Encryption
aes-gcm = "0.10"
base64 = "0.21"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client (for publishing events to Flux)
reqwest = { version = "0.11", features = ["json"] }

# HTTP server (for connector API)
axum = { version = "0.7" }

# UUID generation
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.0"
mockito = "1.0"
