[package]
name = "flux-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
ratzilla = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = { version = "0.6", features = ["websocket", "http"] }
gloo-timers = "0.3"
web-sys = { version = "0.3", features = ["Window", "Location"] }
js-sys = "0.3"
futures-util = "0.3"
chrono = { version = "0.4", features = ["wasmbind"], default-features = false }
